--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.19.3",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "nuxt": "^2.15.8",
     "request": "^2.88.2",
